add pin, delete post